[gd_scene load_steps=17 format=3 uid="uid://d4cpf87cb1bs0"]

[ext_resource type="Script" path="res://data/main/buttons.gd" id="1_bni1w"]
[ext_resource type="PackedScene" uid="uid://bcxdvv4qwwmqm" path="res://src/perry_says/perry_says.tscn" id="2_p72e3"]
[ext_resource type="PackedScene" uid="uid://c1ov306httsie" path="res://src/perry_python/perry_python.tscn" id="3_e04k2"]
[ext_resource type="PackedScene" uid="uid://c1n3bt7ntc5gf" path="res://src/perry_polo/perry_polo.tscn" id="4_2g5rt"]
[ext_resource type="PackedScene" uid="uid://cgu5dun6rgtic" path="res://src/perry_llama/perry_llama.tscn" id="5_c3ay5"]
[ext_resource type="PackedScene" uid="uid://bjw6sh7j2lsq3" path="res://src/perry_dodge/perry_dodge.tscn" id="6_witco"]
[ext_resource type="PackedScene" uid="uid://cj0i3bqn4ap1r" path="res://src/perry_flap/perry_flap.tscn" id="7_8m0e8"]
[ext_resource type="PackedScene" uid="uid://cf4xkqs74ytur" path="res://src/perry_run/perry_run.tscn" id="8_jcog7"]
[ext_resource type="PackedScene" uid="uid://dx4hwtnr40m1r" path="res://src/perry_space/perry_space.tscn" id="9_f6anq"]
[ext_resource type="PackedScene" uid="uid://pnum4ath488j" path="res://src/perry_squash/perry_squash.tscn" id="10_j1rxk"]
[ext_resource type="PackedScene" uid="uid://b8eyyvj5cesul" path="res://src/main/about.tscn" id="11_mcf75"]
[ext_resource type="PackedScene" uid="uid://cuo4gv5dg3v" path="res://src/perry_putt/perry_putt.tscn" id="11_yj5m7"]
[ext_resource type="PackedScene" uid="uid://eol8e22mmwv0" path="res://src/perry_test/perry_test.tscn" id="12_2hp02"]
[ext_resource type="PackedScene" uid="uid://cs18y0ygm8p13" path="res://src/main/options.tscn" id="12_wiofo"]
[ext_resource type="PackedScene" uid="uid://2opj6l2yf0hy" path="res://src/main/highscore.tscn" id="13_sdpee"]
[ext_resource type="Theme" uid="uid://s0srltpmhp6g" path="res://themes/main/main.tres" id="14_ihqmu"]

[node name="Buttons" type="CanvasLayer"]
layer = 3
script = ExtResource("1_bni1w")
perry_says = ExtResource("2_p72e3")
perry_python = ExtResource("3_e04k2")
perry_polo = ExtResource("4_2g5rt")
perry_llama = ExtResource("5_c3ay5")
perry_dodge = ExtResource("6_witco")
perry_flap = ExtResource("7_8m0e8")
perry_run = ExtResource("8_jcog7")
perry_space = ExtResource("9_f6anq")
perry_squash = ExtResource("10_j1rxk")
perry_putt = ExtResource("11_yj5m7")
perry_test = ExtResource("12_2hp02")
about = ExtResource("11_mcf75")
options = ExtResource("12_wiofo")
highscore = ExtResource("13_sdpee")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
ratio = 0.5625

[node name="Control" type="Control" parent="AspectRatioContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="AspectRatioContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
color = Color(0.137255, 0.313726, 0.215686, 1)

[node name="GridContainer" type="GridContainer" parent="AspectRatioContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
columns = 3

[node name="InitialsLabel" type="Label" parent="AspectRatioContainer/Control/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_filter = 0
theme = ExtResource("14_ihqmu")
text = "Input Initials:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Initials" type="LineEdit" parent="AspectRatioContainer/Control/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("14_ihqmu")
alignment = 1
max_length = 3

[node name="Control" type="Control" parent="AspectRatioContainer/Control/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SimonSays" type="Button" parent="AspectRatioContainer/Control/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("14_ihqmu")
text = "Perry Says"

[node name="Snake" type="Button" parent="AspectRatioContainer/Control/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("14_ihqmu")
text = "Python Perry"

[node name="Perry" type="Button" parent="AspectRatioContainer/Control/GridContainer"]
layout_mode = 2
theme = ExtResource("14_ihqmu")
text = "Perry Water Polo"

[node name="Dino" type="Button" parent="AspectRatioContainer/Control/GridContainer"]
layout_mode = 2
theme = ExtResource("14_ihqmu")
text = "Perry's Llama Leap"

[node name="Creep" type="Button" parent="AspectRatioContainer/Control/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("14_ihqmu")
text = "Perry Dodge"

[node name="Flappy" type="Button" parent="AspectRatioContainer/Control/GridContainer"]
layout_mode = 2
theme = ExtResource("14_ihqmu")
text = "Perry Flap"

[node name="Saucer" type="Button" parent="AspectRatioContainer/Control/GridContainer"]
layout_mode = 2
theme = ExtResource("14_ihqmu")
text = "Perry Run
(Coming Back Soon)"

[node name="Attack" type="Button" parent="AspectRatioContainer/Control/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("14_ihqmu")
text = "Perry Space Attack"

[node name="Squash" type="Button" parent="AspectRatioContainer/Control/GridContainer"]
layout_mode = 2
theme = ExtResource("14_ihqmu")
text = "Perry Squash"

[node name="Control3" type="Control" parent="AspectRatioContainer/Control/GridContainer"]
layout_mode = 2

[node name="Golf" type="Button" parent="AspectRatioContainer/Control/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("14_ihqmu")
text = "Perry Putt"

[node name="PerryTest" type="Button" parent="AspectRatioContainer/Control/GridContainer"]
layout_mode = 2

[node name="About" type="Button" parent="AspectRatioContainer/Control/GridContainer"]
layout_mode = 2
theme = ExtResource("14_ihqmu")
text = "About"

[node name="Options" type="Button" parent="AspectRatioContainer/Control/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("14_ihqmu")
text = "Options"

[node name="Highscores" type="Button" parent="AspectRatioContainer/Control/GridContainer"]
layout_mode = 2
theme = ExtResource("14_ihqmu")
text = "Highscores"

[connection signal="text_changed" from="AspectRatioContainer/Control/GridContainer/Initials" to="." method="_on_initials_text_changed"]
[connection signal="pressed" from="AspectRatioContainer/Control/GridContainer/SimonSays" to="." method="_on_simon_says_pressed"]
[connection signal="pressed" from="AspectRatioContainer/Control/GridContainer/Snake" to="." method="_on_snake_pressed"]
[connection signal="pressed" from="AspectRatioContainer/Control/GridContainer/Perry" to="." method="_on_pong_pressed"]
[connection signal="pressed" from="AspectRatioContainer/Control/GridContainer/Dino" to="." method="_on_dino_pressed"]
[connection signal="pressed" from="AspectRatioContainer/Control/GridContainer/Creep" to="." method="_on_creep_pressed"]
[connection signal="pressed" from="AspectRatioContainer/Control/GridContainer/Flappy" to="." method="_on_flappy_pressed"]
[connection signal="pressed" from="AspectRatioContainer/Control/GridContainer/Saucer" to="." method="_on_saucer_pressed"]
[connection signal="pressed" from="AspectRatioContainer/Control/GridContainer/Attack" to="." method="_on_perry_space_pressed"]
[connection signal="pressed" from="AspectRatioContainer/Control/GridContainer/Squash" to="." method="_on_perry_squash_pressed"]
[connection signal="pressed" from="AspectRatioContainer/Control/GridContainer/Golf" to="." method="_on_perry_putt_pressed"]
[connection signal="pressed" from="AspectRatioContainer/Control/GridContainer/PerryTest" to="." method="_on_perry_test_pressed"]
[connection signal="pressed" from="AspectRatioContainer/Control/GridContainer/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="AspectRatioContainer/Control/GridContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="AspectRatioContainer/Control/GridContainer/Highscores" to="." method="_on_highscore_pressed"]
